<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlashCardActivity">

    <TextView
        android:id="@+id/operand1"
        android:text="@string/firstOperandValue"
        android:textStyle="bold"
        android:textSize="120sp"
        android:textAlignment="center"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/horizontalLine1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#551A8B"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operand1" />

    <TextView
        android:id="@+id/operator"
        android:text="@string/operatorValue"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/operand1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/operand2" />

    <TextView
        android:id="@+id/operand2"
        android:text="@string/secondOperandValue"
        android:textStyle="bold"
        android:textSize="120sp"
        android:textAlignment="center"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/operand1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/horizontalLine2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#551A8B"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operand2" />
    
    <Button
        android:id="@+id/generateButton"
        android:text="@string/generateButton"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine2"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yourAnswerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answerTextView"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/generateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberSigned"
        app:layout_constraintTop_toBottomOf="@+id/yourAnswerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submitButton2"
        android:text="@string/submitButton"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/answerEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>