...
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleLoginScreen" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/simpleLoginScreen"
        app:layout_constraintStart_toEndOf="@+id/usernameLabel" />

...
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />

    <EditText
        android:id="@+id/passwordEditText"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintStart_toEndOf="@+id/passwordLabel" />
...
